--- a/main3i.ipynb
+++ b/main3i.ipynb
@@ -10,7 +10,7 @@
     "import numpy as np\n",
     "from datasets import DatasetDict,Dataset\n",
     "from arguments import DataTrainingArguments, ModelArguments, VITSTrainingArguments\n",
-    "from VitsModelSplit import VitsModelSplit2\n",
+    "from VitsModelSplit import VitsModelSplit\n",
     "from transformers import AutoTokenizer,HfArgumentParser,set_seed\n",
     "from trainer import vits_trainin   \n",
     "from feature_extraction import VitsFeatureExtractor\n",
@@ -82,7 +82,7 @@
     }
    ],
    "source": [
-    "model = VitsModelSplit2.from_pretrained(\"facebook/mms-tts-ara\",cache_dir=\"./\")\n",
+    "model = VitsModelSplit.from_pretrained(\"facebook/mms-tts-ara\",cache_dir=\"./\")\n",
     "tokenizer = AutoTokenizer.from_pretrained(\"facebook/mms-tts-ara\",cache_dir=\"./\")\n",
     "config = model.config\n",
     "feature_extractor = VitsFeatureExtractor()\n",
